<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
  <header
      android:summary="Example for Retrofit, Dagger, MVP, StatusPageView, Room"
      android:title="RepositoriesActivity">
    <intent
        android:targetClass="com.template.kotlintemplate.ui.screen.repository.list.RepositoriesActivity"
        android:targetPackage="com.github.kotlintemplate" />
  </header>

  <header
      android:summary="Example for MVP"
      android:title="LoginActivity">
    <intent
        android:targetClass="com.template.kotlintemplate.ui.screen.login.LoginActivity"
        android:targetPackage="com.github.kotlintemplate" />
  </header>

  <header
      android:summary="Broadcast reviceiver demo"
      android:title="BroadcastDemoActivity">
    <intent
        android:action="com.template.BROADCAST_ACTIVITY"
        android:targetClass="com.template.kotlintemplate.practice.broadcast.BroadCastDemoActivity"
        android:targetPackage="com.github.kotlintemplate" />
  </header>
</preference-headers>